# OS_Concepts_Assignments

./: .gitignore  CMakeLists.txt  Makefile  README.md  inputFile.txt  launchTestProcesses.sh  main.c  proc_nanny.c  proc_nanny.h  test.sh  test15  test5  testInput.config  testproclaunch.sh
assignment1/: README.md  test15.c  test5.c
assignment2/: CMakeLists.txt  Makefile  README.md  launchTestProcesses.sh  linked_list.c  linked_list.h  main.c  proc_nanny.c  proc_nanny.h  testInput.config
assignment3/: CMakeLists.txt  README.md  proc_nanny_client.c  proc_nanny_client.h  proc_nanny_server.c  proc_nanny_server.h  test.c
assignment3/procnanny_client/: CMakeLists.txt  Makefile  main.c  proc_nanny.h  proc_nanny_client.c  proc_nanny_client.h
assignment3/procnanny_server/: CMakeLists.txt  Makefile  main.c  proc_nanny_server.c  proc_nanny_server.h  testInput.config
